# sakio87-bookstore

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: admin.py  factories.py  urls.py  viewsets.py
order/migrations/: 0001_initial.py  0002_rename_product_order_products.py
order/models/: order.py
order/serializers/: __init__.py  order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py  views.py
product/migrations/: 0001_initial.py  0003_rename_category_product_categories.py
product/models/: category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
